[package]
name = "escape_from_hell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.14.0"
bevy_rapier2d = "0.19.0"
leafwing-input-manager = "0.7.1"
rand = "0.8.5"
